[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
select = [
  "E",  # pycodestyle errors
  "F",  # pyflakes
  "W",  # warnings
  "B",  # bugbear
  "I",  # isort
]
ignore = [
  "E203",  # whitespace before ':' (black compatibility)
]
# Added target version to align with Black and Python runtime
target-version = "py310"

[tool.ruff.isort]
# Keep first-party imports grouped for these packages
known-first-party = ["ioc_core", "qt_app"]

[project]
# Declare a single, explicit Python runtime target
requires-python = ">=3.10,<3.12"

[tool.mypy]
python_version = "3.10"
# Run mypy in strict mode for core and qt_app
strict = true
files = ["ioc_core", "qt_app"]
warn_unused_ignores = true
show_error_codes = true
pretty = true

[[tool.mypy.overrides]]
module = ["PySide6.*"]
ignore_missing_imports = true

# Qt code is GUI-heavy; relax some strictness while keeping type checking enabled
[[tool.mypy.overrides]]
module = ["qt_app.*"]
disallow_untyped_defs = false
disallow_any_generics = false
warn_return_any = false
warn_unreachable = false 